--- a/public/otsuka/index.html
+++ b/public/otsuka/index.html
@@ -35,7 +35,7 @@
     <main>
       <!-- 検索ボックス -->
       <section class="search-box">
-        <input type="search" placeholder="検索">
+        <input type="search" class="search-input" placeholder="検索">
       </section>
 
       <!-- ストーリー・オンラインユーザー -->
